login session lasts longer

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -191,6 +191,7 @@ third_party.amazon.facilitator_fee = 0
 
 settings.noLESScompile = 0 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache
 
+[testing : development]
 
 [cronjob : production]
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
