updated autoload libraries

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,6 +14,7 @@ includePaths.library = APPLICATION_PATH "/../library"
 autoloaderNamespaces[] = "Local_"
 autoloaderNamespaces[] = "Ppload_"
 autoloaderNamespaces[] = "Crontab_"
+autoloaderNamespaces[] = "Cgsmith"
 bootstrap.path = APPLICATION_PATH "/modules/default/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
