--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -92,6 +92,7 @@ third_party.paypal.application.id = "APP-ID"
 third_party.paypal.api.endpoint = "https://svcs.paypal.com"
 third_party.paypal.form.endpoint = "https://ic.paypal.com"
 third_party.paypal.ipn.endpoint = "https://www.paypal.com"
+third_party.paypal.masspay.endpoint = "https://api-3t.paypal.com/nvp"
 third_party.paypal.service.version = "1.2.0"
 third_party.paypal.request.data.format = "NV"
 third_party.paypal.response.data.format = "NV"
@@ -208,3 +209,22 @@ resources.modules[] =
 resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+
+third_party.paypal.sandbox.active = 0
+third_party.paypal.security.userid = "ppuid"
+third_party.paypal.security.password = "pppass"
+third_party.paypal.security.signature = "ppsig"
+third_party.paypal.facilitator_fee_receiver = "receiver@mail.com"
+third_party.paypal.facilitator_fee = 0
+third_party.paypal.application.id = "APP-ID"
+third_party.paypal.api.endpoint = "https://svcs.paypal.com"
+third_party.paypal.form.endpoint = "https://ic.paypal.com"
+third_party.paypal.ipn.endpoint = "https://www.paypal.com"
+third_party.paypal.masspay.endpoint = "https://api-3t.paypal.com/nvp"
+third_party.paypal.service.version = "1.2.0"
+third_party.paypal.request.data.format = "NV"
+third_party.paypal.response.data.format = "NV"
+third_party.paypal.client.auth = "Nocert"
+third_party.paypal.client.application_id = "app"
+third_party.paypal.client.partner_name = "partner"
+third_party.paypal.test = Live
