--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -93,6 +93,7 @@ third_party.paypal.api.endpoint = "https://svcs.paypal.com"
 third_party.paypal.form.endpoint = "https://ic.paypal.com"
 third_party.paypal.ipn.endpoint = "https://www.paypal.com"
 third_party.paypal.masspay.endpoint = "https://api-3t.paypal.com/nvp"
+third_party.paypal.masspay.ipn.endpoint = "https://ipnpb.paypal.com/cgi-bin"
 third_party.paypal.service.version = "1.2.0"
 third_party.paypal.request.data.format = "NV"
 third_party.paypal.response.data.format = "NV"
