point member pages to new url (pling.me)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -155,6 +155,8 @@ settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
 settings.static.include.faq = "faq.phtml"
 
+settings.member.page.server = "//localhost"
+
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
 [development : production]
