updated member page (about)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -73,15 +73,6 @@ images.upload.path = APPLICATION_PATH "/../httpdocs/img/data/"
 images.media.server = "http://cn.ocs-webserver.org"
 images.media.upload = "http://cn.ocs-webserver.org/image_bucket_upload.php"
 
-third_party.facebook.app_id = fbid
-third_party.facebook.secret = "fbsec"
-
-third_party.twitter.consumer.key = "twkey"
-third_party.twitter.consumer.secret = "twsec"
-
-third_party.thingiverse.consumer.key = "key"
-third_party.thingiverse.consumer.secret = "sec"
-
 third_party.paypal.sandbox.active = 0
 third_party.paypal.security.userid = "ppuid"
 third_party.paypal.security.password = "pppass"
@@ -106,13 +97,6 @@ third_party.dwolla.consumer.access_secret = "sec"
 third_party.dwolla.consumer.token = "token"
 third_party.dwolla.api.endpoint = "https://www.dwolla.com"
 third_party.dwolla.facilitator_fee = 0
-
-third_party.amazon.app_id = ""
-third_party.amazon.consumer.access_key = ""
-third_party.amazon.consumer.access_secret = ""
-third_party.amazon.api.endpoint = "https://fps.amazonaws.com"
-third_party.amazon.form.endpoint = "https://authorize.payments.amazon.com/cobranded-ui/actions/start"
-third_party.amazon.facilitator_fee = 0
 
 third_party.github.client_id = ""
 third_party.github.client_secret = ""
@@ -155,7 +139,8 @@ settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
 settings.static.include.faq = "faq.phtml"
 
-settings.member.page.server = "localhost"
+settings.member.page.server = "pling.me"
+settings.member.product.server = "opendesktop.org"
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
@@ -190,13 +175,6 @@ third_party.dwolla.consumer.access_secret = "sandbox.sec"
 third_party.dwolla.consumer.token = "sandbox.token"
 third_party.dwolla.api.endpoint = "https://uat.dwolla.com"
 third_party.dwolla.facilitator_fee = 0
-
-third_party.amazon.app_id = ""
-third_party.amazon.consumer.access_key = ""
-third_party.amazon.consumer.access_secret = ""
-third_party.amazon.api.endpoint = "https://fps.sandbox.amazonaws.com"
-third_party.amazon.form.endpoint = "https://authorize.payments-sandbox.amazon.com/cobrandedui/actions/start"
-third_party.amazon.facilitator_fee = 0
 
 settings.noLESScompile = 0 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache
 
