--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -209,3 +209,10 @@ third_party.paypal.client.auth = "Nocert"
 third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
 third_party.paypal.test = Live
+
+
+[searchbotenv : production]
+resources.frontController.params.displayExceptions = 0
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+
