send search bots to slave db

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -229,3 +229,24 @@ third_party.paypal.client.auth = "Nocert"
 third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
 third_party.paypal.test = Live
+
+
+
+
+[searchbotenv : production]
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.frontController.defaultModule = "default"
+resources.frontController.baseurl = "/"
+resources.modules[] =
+resources.layout.layout = "flat_ui_template"
+resources.layout.layoutPath = APPLICATION_PATH "/modules/default/views/layout"
+resources.view[] =
+resources.view.encoding = "UTF-8"
+resources.view.doctype = "XHTML5"
+resources.view.contentType = "text/html;charset=utf-8"
+
+resources.frontController.params.displayExceptions = 0
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+
+
