--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -128,6 +128,20 @@ settings.session.saveHandler.options.servers.0.persistent = true
 settings.session.saveHandler.options.servers.0.status = true
 settings.session.saveHandler.options.compression = true
 
+settings.cache.frontend.type = Core
+settings.cache.frontend.options.lifetime = 600
+settings.cache.frontend.options.automatic_serialization = true
+settings.cache.frontend.options.cache_id_prefix = "[some string]"
+settings.cache.frontend.options.cache = true
+
+settings.cache.backend.type = Memcached
+settings.cache.backend.options.servers.0.host = "memcachehost"
+settings.cache.backend.options.servers.0.port = 11211
+settings.cache.backend.options.servers.0.persistent = true
+settings.cache.backend.options.servers.0.weight = 1
+settings.cache.backend.options.servers.0.timeout = 5
+settings.cache.backend.options.servers.0.retry_interval = 15
+
 settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
 
