cron job updated

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -224,6 +224,22 @@ third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
 third_party.paypal.test = Live
 
+settings.cache.frontend.type = Core
+settings.cache.frontend.options.lifetime = 600
+settings.cache.frontend.options.automatic_serialization = true
+settings.cache.frontend.options.cache_id_prefix = "[some string]"
+settings.cache.frontend.options.cache = true
+
+settings.cache.backend.type = File
+settings.cache.backend.options.cache_dir = APPLICATION_CACHE
+settings.cache.backend.options.file_locking = true
+settings.cache.backend.options.read_control = true
+settings.cache.backend.options.read_control_type = 'crc32'
+settings.cache.backend.options.hashed_directory_level = 1
+settings.cache.backend.options.hashed_directory_perm = 0700
+settings.cache.backend.options.file_name_prefix = '[some string]'
+settings.cache.backend.options.cache_file_perm = 0700
+
 
 [searchbotenv : production]
 resources.frontController.params.displayExceptions = 0
