product page update

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,13 +1,15 @@
 [production]
 version = "v1.3c"
 
+;phpSettings.date.timezone = "America/New_York"
+
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 0
 
 phpSettings.session.name = "OcsWebserverId"
 phpSettings.session.gc_maxlifetime = 3600
-phpSettings.session.save_path = APPLICATION_PATH "/../data/sessions"
+phpSettings.session.save_path = APPLICATION_DATA "/sessions"
 phpSettings.session.cookie_httponly = true
 
 includePaths.library = APPLICATION_PATH "/../library"
@@ -60,9 +62,9 @@ resources.translate.registry_key = "Zend_Translate"
 resources.translate.adapter = array
 resources.translate.options.scan = "directory"
 resources.translate.locale = "en_US"
-resources.translate.data.de_DE = APPLICATION_PATH "/../data/locales/de_DE.php"
-resources.translate.data.en_US = APPLICATION_PATH "/../data/locales/en_US.php"
-resources.translate.data.zh_CN = APPLICATION_PATH "/../data/locales/zh_CN.php"
+resources.translate.data.de_DE = APPLICATION_DATA "/locales/de_DE.php"
+resources.translate.data.en_US = APPLICATION_DATA "/locales/en_US.php"
+resources.translate.data.zh_CN = APPLICATION_DATA "/locales/zh_CN.php"
 
 queue.validate.name = "website_validate"
 queue.validate.dbAdapter = "Local_Queue_Adapter_Db"
@@ -113,34 +115,49 @@ admin.email = "contact@ocs-webserver.org"
 website.tracking.chartbeat = "/js/tracking/chartbeat.js"
 website.tracking.google = "/js/tracking/goggle.js"
 
-settings.cache.path = APPLICATION_PATH "/../data/cache/"
-settings.log.path = APPLICATION_PATH "/../data/logs/"
-settings.search.path = APPLICATION_PATH "/../data/indexes/"
+settings.cache.path = APPLICATION_CACHE
+settings.log.path = APPLICATION_DATA "/logs/"
+settings.search.path = APPLICATION_DATA "/indexes/"
 
 settings.auth_session.remember_me.name = 'OcsWebserverRememberMe'
 settings.auth_session.remember_me.timeout = 31536000
 settings.auth_session.name = 'OcsWebserverSession'
 settings.auth_session.timeout = 3600
 
+settings.session.saveHandler.replace.enabled = true
+settings.session.saveHandler.cache.type = Libmemcached
+settings.session.saveHandler.class = Local_Session_Handler_Memcache
 settings.session.saveHandler.options.servers.0.host = "memcachehost"
 settings.session.saveHandler.options.servers.0.port = 11211
 settings.session.saveHandler.options.servers.0.persistent = true
 settings.session.saveHandler.options.servers.0.status = true
 settings.session.saveHandler.options.compression = true
 
+settings.cache.enabled = true
 settings.cache.frontend.type = Core
 settings.cache.frontend.options.lifetime = 600
 settings.cache.frontend.options.automatic_serialization = true
 settings.cache.frontend.options.cache_id_prefix = "[some string]"
 settings.cache.frontend.options.cache = true
 
-settings.cache.backend.type = Memcached
+settings.cache.backend.type = Libmemcached
 settings.cache.backend.options.servers.0.host = "memcachehost"
 settings.cache.backend.options.servers.0.port = 11211
 settings.cache.backend.options.servers.0.persistent = true
 settings.cache.backend.options.servers.0.weight = 1
 settings.cache.backend.options.servers.0.timeout = 5
 settings.cache.backend.options.servers.0.retry_interval = 15
+
+; alternative backend file cache, if no memcache installed (only for development environments)
+;settings.cache.backend.type = File
+;settings.cache.backend.options.cache_dir = APPLICATION_CACHE
+;settings.cache.backend.options.file_locking = true
+;settings.cache.backend.options.read_control = true
+;settings.cache.backend.options.read_control_type = 'crc32'
+;settings.cache.backend.options.hashed_directory_level = 1
+;settings.cache.backend.options.hashed_directory_perm = 0700
+;settings.cache.backend.options.file_name_prefix = 'ocs'
+;settings.cache.backend.options.cache_file_perm = 0700
 
 settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
@@ -152,9 +169,6 @@ settings.static.include.terms = "terms.phtml"
 settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
 settings.static.include.faq = "faq.phtml"
-
-settings.member.page.server = "pling.me"
-settings.member.product.server = "opendesktop.org"
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
@@ -223,6 +237,9 @@ third_party.paypal.client.auth = "Nocert"
 third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
 third_party.paypal.test = Live
+
+
+settings.cache.enabled = true
 
 settings.cache.frontend.type = Core
 settings.cache.frontend.options.lifetime = 600
