[backend]: storecategories: frozen window after deleting an item

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -170,6 +170,11 @@ settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
 settings.static.include.faq = "faq.phtml"
 
+settings.queue.general.name = "ocs_jobs"
+; timeout in microseconds
+settings.queue.general.timeout = 600000
+settings.queue.general.message_count = 1
+
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
 [development : production]
