--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -119,6 +119,9 @@ settings.cache.path = APPLICATION_CACHE
 settings.log.path = APPLICATION_DATA "/logs/"
 settings.search.path = APPLICATION_DATA "/indexes/"
 
+
+
+
 settings.auth_session.remember_me.name = 'OcsWebserverRememberMe'
 settings.auth_session.remember_me.timeout = 31536000
 settings.auth_session.name = 'OcsWebserverSession'
@@ -161,6 +164,8 @@ settings.cache.backend.options.servers.0.retry_interval = 15
 
 settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
+settings.client.default.baseurl = 'opendesktop.org'
+settings.client.default.baselogo = 'images/system/storeLogo.png'
 
 settings.static.include_path = APPLICATION_PATH "/../httpdocs/partials/"
 settings.static.include.contact = "contact.phtml"
