--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -169,6 +169,7 @@ settings.static.include.privacy = "privacy.phtml"
 settings.static.include.terms = "terms.phtml"
 settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
+settings.static.include.terms-dmca = "terms-dmca.phtml"
 settings.static.include.faq = "faq.phtml"
 
 settings.queue.general.name = "ocs_jobs"
