--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -173,6 +173,7 @@ settings.static.include.privacy = "privacy.phtml"
 settings.static.include.terms = "terms.phtml"
 settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
+settings.static.include.terms-dmca = "terms-dmca.phtml"
 settings.static.include.faq = "faq.phtml"
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
