--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -162,6 +162,7 @@ settings.cache.backend.options.servers.0.retry_interval = 15
 settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
 settings.client.default.baseurl = 'opendesktop.org'
+settings.client.default.baselogo = 'images/system/storeLogo.png'
 
 settings.static.include_path = APPLICATION_PATH "/../httpdocs/partials/"
 settings.static.include.contact = "contact.phtml"
