--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -119,9 +119,6 @@ settings.cache.path = APPLICATION_CACHE
 settings.log.path = APPLICATION_DATA "/logs/"
 settings.search.path = APPLICATION_DATA "/indexes/"
 
-
-
-
 settings.auth_session.remember_me.name = 'OcsWebserverRememberMe'
 settings.auth_session.remember_me.timeout = 31536000
 settings.auth_session.name = 'OcsWebserverSession'
@@ -175,6 +172,11 @@ settings.static.include.terms-general = "terms-general.phtml"
 settings.static.include.terms-publishing = "terms-publishing.phtml"
 settings.static.include.terms-dmca = "terms-dmca.phtml"
 settings.static.include.faq = "faq.phtml"
+
+settings.queue.general.name = "ocs_jobs"
+; timeout in microseconds
+settings.queue.general.timeout = 600000
+settings.queue.general.message_count = 1
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
