solr search model added
solr search model updated

updated search

updated search

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -159,6 +159,10 @@ settings.cache.backend.options.servers.0.retry_interval = 15
 ;settings.cache.backend.options.file_name_prefix = 'ocs'
 ;settings.cache.backend.options.cache_file_perm = 0700
 
+settings.search.host = 'localhost'
+settings.search.port = '8983'
+settings.search.http_path = '/solr/opendesktop/'
+
 settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
 settings.client.default.baseurl = 'opendesktop.org'
