a simple statistics controller with json response added (for development purposes)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -184,6 +184,17 @@ settings.queue.general.message_count = 1
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
 
+settings.dwh.db.adapter = "pdo_mysql"
+settings.dwh.db.params.host = "host"
+settings.dwh.db.params.username = "uname"
+settings.dwh.db.params.password = "pass"
+settings.dwh.db.params.dbname = "dbname"
+settings.dwh.db.params.charset = "utf8"
+settings.dwh.db.params.type = "pdo_mysql"
+settings.dwh.db.params.driver_options.1002 = "SET NAMES utf8"
+settings.dwh.db.isDefaultTableAdapter = false
+
+
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
