add donation button

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -93,6 +93,8 @@ third_party.paypal.response.data.format = "NV"
 third_party.paypal.client.auth = "Nocert"
 third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
+third_party.paypal.merchantid = 0
+
 
 third_party.dwolla.consumer.access_key = "key"
 third_party.dwolla.consumer.access_secret = "sec"
