--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -93,6 +93,8 @@ third_party.paypal.response.data.format = "NV"
 third_party.paypal.client.auth = "Nocert"
 third_party.paypal.client.application_id = "app"
 third_party.paypal.client.partner_name = "partner"
+third_party.paypal.merchantid = 0
+
 
 third_party.dwolla.consumer.access_key = "key"
 third_party.dwolla.consumer.access_secret = "sec"
@@ -183,6 +185,17 @@ settings.queue.general.timeout = 600000
 settings.queue.general.message_count = 1
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
+
+settings.dwh.db.adapter = "pdo_mysql"
+settings.dwh.db.params.host = "host"
+settings.dwh.db.params.username = "uname"
+settings.dwh.db.params.password = "pass"
+settings.dwh.db.params.dbname = "dbname"
+settings.dwh.db.params.charset = "utf8"
+settings.dwh.db.params.type = "pdo_mysql"
+settings.dwh.db.params.driver_options.1002 = "SET NAMES utf8"
+settings.dwh.db.isDefaultTableAdapter = false
+
 
 [development : production]
 phpSettings.display_startup_errors = 1
