--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -185,6 +185,7 @@ settings.queue.general.timeout = 600000
 settings.queue.general.message_count = 1
 
 settings.noLESScompile = 1 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache. otherwise 0 to process less files.
+settings.savePageView = 1 ; in some server environment we don't want to store the page views. I this case set this value to 0.
 
 settings.dwh.db.adapter = "pdo_mysql"
 settings.dwh.db.params.host = "host"
