change download link

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -111,6 +111,7 @@ third_party.ppload.server = "https://www.ocs-fileserver.org"
 third_party.ppload.api_uri = "https://www.ocs-fileserver.org/api/"
 third_party.ppload.client_id = "clientid"
 third_party.ppload.secret = "sec"
+third_party.ppload.download_secret = "sec"
 
 admin.email = "contact@ocs-webserver.org"
 
