--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -104,7 +104,11 @@ third_party.dwolla.facilitator_fee = 0
 
 third_party.github.client_id = ""
 third_party.github.client_secret = ""
-third_party.github.client_callback = ""
+third_party.github.client_callback = $_SERVER['HTTP_HOST'] "/oauth/github"
+
+third_party.ocs.client_id = ""
+third_party.ocs.client_secret = ""
+third_party.ocs.client_callback = $_SERVER['HTTP_HOST'] "/oauth/ocs"
 
 ; ppload
 third_party.ppload.server = "https://www.ocs-fileserver.org"
