update for opendesktop id server

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -202,6 +202,13 @@ settings.dwh.db.params.type = "pdo_mysql"
 settings.dwh.db.params.driver_options.1002 = "SET NAMES utf8"
 settings.dwh.db.isDefaultTableAdapter = false
 
+settings.id_server.authorize_url = ""
+settings.id_server.token_url = ""
+settings.id_server.callback = $_SERVER['HTTP_HOST'] "/oauth/ocs"
+settings.id_server.client_id = ""
+settings.id_server.client_secret = ""
+settings.id_server.create_user_url = ""
+settings.id_server.profile_user_url = ""
 
 [development : production]
 phpSettings.display_startup_errors = 1
