update for opendesktop id server

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -174,6 +174,9 @@ settings.client.default.name = 'default'
 settings.client.config.path = APPLICATION_PATH "/configs/"
 settings.client.default.baseurl = 'opendesktop.org'
 settings.client.default.baselogo = 'images/system/storeLogo.png'
+settings.client.default.url_forum = ""
+settings.client.default.url_blog = ""
+
 
 settings.static.include_path = APPLICATION_PATH "/../httpdocs/partials/"
 settings.static.include.contact = "contact.phtml"
