--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,7 @@ httpdocs/src/status.jsx
 httpdocs/images_sys/flatpak-kde/*
 httpdocs/images_sys/superstore/*
 
-# node modules
+# appimagehub dev
 node_modules/*
-
-# appimagehub dev folder
-appimagehub/*
+appimagehub-dev/*
+.ftpconfig
