sync user opencode.net

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -213,6 +213,18 @@ settings.id_server.client_secret = ""
 settings.id_server.create_user_url = ""
 settings.id_server.profile_user_url = ""
 
+settings.opencode_server.db.adapter = "pdo_mysql"
+settings.opencode_server.db.params.host = "host"
+settings.opencode_server.db.params.username = "uname"
+settings.opencode_server.db.params.password = "pass"
+settings.opencode_server.db.params.dbname = "dbname"
+settings.opencode_server.db.params.port = "3307"
+settings.opencode_server.db.params.charset = "utf8"
+settings.opencode_server.db.params.type = "pdo_mysql"
+settings.opencode_server.db.params.driver_options.1002 = "SET NAMES utf8"
+settings.opencode_server.db.isDefaultTableAdapter = false
+
+
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
