--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -224,6 +224,8 @@ settings.opencode_server.db.params.type = "pdo_mysql"
 settings.opencode_server.db.params.driver_options.1002 = "SET NAMES utf8"
 settings.opencode_server.db.isDefaultTableAdapter = false
 
+settings.ocs_server.apiUri = "http://ocs-server.org"
+
 
 [development : production]
 phpSettings.display_startup_errors = 1
