--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -218,11 +218,13 @@ settings.opencode_server.db.params.host = "host"
 settings.opencode_server.db.params.username = "uname"
 settings.opencode_server.db.params.password = "pass"
 settings.opencode_server.db.params.dbname = "dbname"
-settings.opencode_server.db.params.port = "3307"
+settings.opencode_server.db.params.port = "3306"
 settings.opencode_server.db.params.charset = "utf8"
 settings.opencode_server.db.params.type = "pdo_mysql"
 settings.opencode_server.db.params.driver_options.1002 = "SET NAMES utf8"
 settings.opencode_server.db.isDefaultTableAdapter = false
+
+settings.ocs_server.apiUri = "http://ocs-server.org"
 
 
 [development : production]
