--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -224,6 +224,16 @@ settings.opencode_server.db.params.type = "pdo_mysql"
 settings.opencode_server.db.params.driver_options.1002 = "SET NAMES utf8"
 settings.opencode_server.db.isDefaultTableAdapter = false
 
+settings.ident.host = ""
+settings.ident.port = "389"
+settings.ident.username = ""
+settings.ident.password = ""
+settings.ident.bindRequiresDn = true
+settings.ident.accountDomainName = ""
+settings.ident.baseDn = ""
+settings.ident.accountFilterFormat = "(objectClass=account)"
+settings.ident.tryUsernameSplit = false
+
 settings.ocs_server.apiUri = "http://ocs-server.org"
 
 
