--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -205,34 +205,30 @@ settings.dwh.db.params.type = "pdo_mysql"
 settings.dwh.db.params.driver_options.1002 = "SET NAMES utf8"
 settings.dwh.db.isDefaultTableAdapter = false
 
-settings.id_server.authorize_url = ""
-settings.id_server.token_url = ""
-settings.id_server.callback = $_SERVER['HTTP_HOST'] "/oauth/ocs"
-settings.id_server.client_id = ""
-settings.id_server.client_secret = ""
-settings.id_server.create_user_url = ""
-settings.id_server.profile_user_url = ""
+settings.server.oauth.authorize_url = ""
+settings.server.oauth.token_url = ""
+settings.server.oauth.callback = $_SERVER['HTTP_HOST'] "/oauth/ocs"
+settings.server.oauth.client_id = ""
+settings.server.oauth.client_secret = ""
+settings.server.oauth.create_user_url = ""
+settings.server.oauth.profile_user_url = ""
 
-settings.opencode_server.db.adapter = "pdo_mysql"
-settings.opencode_server.db.params.host = "host"
-settings.opencode_server.db.params.username = "uname"
-settings.opencode_server.db.params.password = "pass"
-settings.opencode_server.db.params.dbname = "dbname"
-settings.opencode_server.db.params.port = "3306"
-settings.opencode_server.db.params.charset = "utf8"
-settings.opencode_server.db.params.type = "pdo_mysql"
-settings.opencode_server.db.params.driver_options.1002 = "SET NAMES utf8"
-settings.opencode_server.db.isDefaultTableAdapter = false
+settings.server.opencode.host = ""
+settings.server.opencode.user_logfilename = "opencode"
+settings.server.opencode.user_sudo = ""
+settings.server.opencode.user_agent = "OCS Opendesktop"
+settings.server.opencode.private_token = ""
+settings.server.opencode.url.user_create = ""
 
-settings.ident.host = ""
-settings.ident.port = "389"
-settings.ident.username = ""
-settings.ident.password = ""
-settings.ident.bindRequiresDn = true
-settings.ident.accountDomainName = ""
-settings.ident.baseDn = ""
-settings.ident.accountFilterFormat = "(objectClass=account)"
-settings.ident.tryUsernameSplit = false
+settings.server.ldap.host = ""
+settings.server.ldap.port = "389"
+settings.server.ldap.username = ""
+settings.server.ldap.password = ""
+settings.server.ldap.bindRequiresDn = true
+settings.server.ldap.accountDomainName = ""
+settings.server.ldap.baseDn = ""
+settings.server.ldap.accountFilterFormat = "(objectClass=account)"
+settings.server.ldap.tryUsernameSplit = false
 
 settings.ocs_server.apiUri = "http://ocs-server.org"
 
@@ -272,6 +268,7 @@ third_party.dwolla.facilitator_fee = 0
 settings.noLESScompile = 0 ; set it 1 to prevent that the LESS files are processed and dont forget to kill the cache
 
 [testing : development]
+
 
 [cronjob : production]
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
@@ -327,4 +324,3 @@ settings.cache.backend.options.cache_file_perm = 0700
 resources.frontController.params.displayExceptions = 0
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
-
