updated user delete workflow

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -230,6 +230,13 @@ settings.server.ldap.baseDn = ""
 settings.server.ldap.accountFilterFormat = "(objectClass=account)"
 settings.server.ldap.tryUsernameSplit = false
 
+settings.server.forum.host = ""
+settings.server.forum.user_logfilename = "forum"
+settings.server.forum.user_sudo = ""
+settings.server.forum.user_agent = "OCS Opendesktop"
+settings.server.forum.private_token = ""
+
+
 settings.ocs_server.apiUri = "http://ocs-server.org"
 
 
