--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -176,6 +176,7 @@ settings.client.default.baseurl = 'opendesktop.org'
 settings.client.default.baselogo = 'images/system/storeLogo.png'
 settings.client.default.url_forum = ""
 settings.client.default.url_blog = ""
+settings.client.default.url_gitlab = ""
 
 
 settings.static.include_path = APPLICATION_PATH "/../httpdocs/partials/"
