--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -247,6 +247,7 @@ settings.jwt.expire.authorizationCode = "10 minutes"
 settings.jwt.expire.resetCode = "2 hours"
 settings.jwt.issuer_ident = "http://localhost:80"
 
+settings.domain.base.host = "www.example.com"
 settings.domain.forum.host = "forum.example.com"
 settings.domain.forum.cookie_name = "_t"
 settings.domain.openid.host = "id.example.com"
