group update from gitlab

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -228,6 +228,7 @@ settings.server.ldap.password = ""
 settings.server.ldap.bindRequiresDn = true
 settings.server.ldap.accountDomainName = ""
 settings.server.ldap.baseDn = ""
+settings.server.ldap.baseGroupDn = ""
 settings.server.ldap.accountFilterFormat = "(objectClass=account)"
 settings.server.ldap.tryUsernameSplit = false
 
