group update from gitlab

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -228,9 +228,9 @@ settings.server.ldap.password = ""
 settings.server.ldap.bindRequiresDn = true
 settings.server.ldap.accountDomainName = ""
 settings.server.ldap.baseDn = ""
-settings.server.ldap.baseGroupDn = ""
 settings.server.ldap.accountFilterFormat = "(objectClass=account)"
 settings.server.ldap.tryUsernameSplit = false
+settings.server.ldap_group.baseDn = ""
 
 settings.server.forum.host = ""
 settings.server.forum.user_logfilename = "forum"
