filter browser original cookie name in config.ini

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -130,6 +130,7 @@ settings.auth_session.remember_me.name = 'OcsWebserverRememberMe'
 settings.auth_session.remember_me.timeout = 31536000
 settings.auth_session.name = 'OcsWebserverSession'
 settings.auth_session.timeout = 3600
+settings.auth_session.filter_browse_original = 'FilterBrowseOriginalSession'
 
 settings.session.saveHandler.replace.enabled = true
 settings.session.saveHandler.cache.type = Libmemcached
