--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,11 +7,6 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 0
 
-phpSettings.session.name = "OcsWebserverId"
-phpSettings.session.gc_maxlifetime = 3600
-phpSettings.session.save_path = APPLICATION_DATA "/sessions"
-phpSettings.session.cookie_httponly = true
-
 includePaths.library = APPLICATION_PATH "/../library"
 autoloaderNamespaces[] = "Local_"
 autoloaderNamespaces[] = "Ppload_"
@@ -126,15 +121,24 @@ settings.cache.path = APPLICATION_CACHE
 settings.log.path = APPLICATION_DATA "/logs/"
 settings.search.path = APPLICATION_DATA "/indexes/"
 
-settings.auth_session.remember_me.name = 'OcsWebserverRememberMe'
-settings.auth_session.remember_me.timeout = 31536000
-settings.auth_session.name = 'OcsWebserverSession'
-settings.auth_session.timeout = 3600
-settings.auth_session.filter_browse_original = 'FilterBrowseOriginalSession'
+phpSettings.session.name = "OcsWebserverId"
+phpSettings.session.save_path = APPLICATION_DATA "/sessions"
+phpSettings.session.cookie_httponly = true
+phpSettings.session.cookie_lifetime = 31536000
+phpSettings.session.gc_maxlifetime = 7776000
+
+settings.session.remember_me.name = "OcsWebserverRememberMe"
+settings.session.remember_me.cookie_lifetime = 31536000
+settings.session.remember_me.cookie_httponly = true
+settings.session.auth.name = "OcsWebserverSession"
+settings.session.auth.cookie_lifetime = 31536000
+settings.session.auth.cookie_path = "/"
+settings.session.auth.cookie_httponly = true
+settings.session.filter_browse_original = 'FilterBrowseOriginalSession'
 
 settings.session.saveHandler.replace.enabled = true
-settings.session.saveHandler.cache.type = Libmemcached
-settings.session.saveHandler.class = Local_Session_Handler_Memcache
+settings.session.saveHandler.cache.type = "Libmemcached"
+settings.session.saveHandler.class = "Local_Session_Handler_Memcache"
 settings.session.saveHandler.options.servers.0.host = "memcachehost"
 settings.session.saveHandler.options.servers.0.port = 11211
 settings.session.saveHandler.options.servers.0.persistent = true
@@ -148,7 +152,7 @@ settings.cache.frontend.options.automatic_serialization = true
 settings.cache.frontend.options.cache_id_prefix = "[some string]"
 settings.cache.frontend.options.cache = true
 
-settings.cache.backend.type = Libmemcached
+settings.cache.backend.type = "Libmemcached"
 settings.cache.backend.options.servers.0.host = "memcachehost"
 settings.cache.backend.options.servers.0.port = 11211
 settings.cache.backend.options.servers.0.persistent = true
@@ -157,7 +161,7 @@ settings.cache.backend.options.servers.0.timeout = 5
 settings.cache.backend.options.servers.0.retry_interval = 15
 
 ; alternative backend file cache, if no memcache installed (only for development environments)
-;settings.cache.backend.type = File
+;settings.cache.backend.type = "File"
 ;settings.cache.backend.options.cache_dir = APPLICATION_CACHE
 ;settings.cache.backend.options.file_locking = true
 ;settings.cache.backend.options.read_control = true
