updated userbase methods

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -225,6 +225,7 @@ settings.server.opencode.user_sudo = ""
 settings.server.opencode.user_agent = "OCS Opendesktop"
 settings.server.opencode.private_token = ""
 settings.server.opencode.url.user_create = ""
+settings.server.opencode.provider_name = ""
 
 settings.server.ldap.host = ""
 settings.server.ldap.port = "389"
